<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- cadastro strings -->

    <string name="ek_img_content">ExportKit Image</string>
    <string name="email">Email</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="eu_li_e_concordo_com_os_termos_de_uso">Eu li e concordo com os termos de uso</string>
    <string name="ja_tem_cadastro_faca_seu_login">Já tem cadastro? Faça seu login</string>


    <string name="username">Usuario</string>
    <string name="ordemServico">Ordem: </string>
    <string name="data">Criado em:</string>

    <string name="app_name">TasksManager</string>
    <string name="lbl_login">Seja bem-vindo!</string>
    <string name="lbl_google">Ou, entre com:</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_senha">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="lbl_cadastro"><u>Não tem conta? Cadastre-se</u></string>
    <!--Cadastro-->
    <string name="lbl_cadastroTitulo">Cadastre-se!</string>
    <string name="txt_nome">Nome</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="txt_dataNasc">Data de nascimento(dd/mm/yyyy)</string>
    <string name="txt_confirmar_senha">Confirmar senha</string>
    <string name="txt_ir_p_login">Já tem uma conta? Faça login!</string>
</resources>