<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                app:srcCompat="@drawable/img_cadastro" />

            <TextView
                android:id="@+id/lbl_login"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/lbl_cadastroTitulo"
                android:textColor="#CEC5D4"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/txt_nome"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/txt_nome"
                android:padding="12dp"
                android:textColor="#CEC5D4"
                android:textColorHint="#CEC5D4" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/text_color"
                android:textColorHint="#CEC5D4" />

            <EditText
                android:id="@+id/txt_senha"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/txt_senha"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#CEC5D4"
                android:textColorHint="#CEC5D4" />

            <EditText
                android:id="@+id/txt_confirmar_senha"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/txt_confirmar_senha"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#CEC5D4"
                android:textColorHint="#CEC5D4" />

            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="sans-serif"
                android:text="@string/btn_cadastrar"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txt_ir_p_login"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/txt_ir_p_login"
                android:textColor="#CEC5D4"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>