<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="231dp"
                android:padding="25dp"
                app:srcCompat="@drawable/img_login" />

            <TextView
                android:id="@+id/lbl_login"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#00673AB7"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/lbl_login"
                android:textColor="#CEC5D4"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#CEC5D4"
                android:textColorHint="#CEC5D4"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/txt_senha"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="220dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/txt_senha"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#CEC5D4"
                android:textColorHint="#CEC5D4"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="sans-serif"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/lbl_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/lbl_cadastro"
                android:textColor="#CEC5D4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbl_google"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00673AB7"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/lbl_google"
                android:textColor="#CEC5D4"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/img_google" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>